[package]
name = "ent-tree"
version = "0.1.1"
edition = "2024"
authors = ["konni332"]
description = "tree but better"
license = "MIT"
repository = "https://github.com/konni332/ent"
homepage = "https://github.com/konni332/ent"
documentation = "https://docs.rs/ent"
readme = "README.md"
keywords = ["cli", "filesystem", "tree"]
categories = ["command-line-utilities"]

[[bin]]
name = "ent"
path = "src/main.rs"

[[bench]]
name = "bench_tree"
harness = false

[dependencies]
clap = {version = "4.5.41", features = ["derive"]}
colored = "3.0.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
anyhow = "1.0.98"
ignore = "0.4.23"


[dev-dependencies]
tempfile = "3.20.0"
criterion = "0.7.0"
